--- a/index.html
+++ b/index.html
@@ -5,9 +5,120 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Tour dine landing page</title>
+  <title>Tour Dine Coming soon Landing page</title>
 </head>
 <body>
-  <script src="script.js"></script>
+    <main>
+      <nav>
+        <header class="td_header">
+          <div class="td_header_logo">
+            <img src="Images/Group.png" />
+          </div>
+          <ul>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Contact</li>
+            <li>Get Access</li>
+          </ul>
+        </header>
+      </nav>
+      <section class="td_section1">
+        <img class="image3" src="Images/Ellipse3.png" />
+        <img class="image4" src="Images/Ellipse4.png" />
+        <img class="image5" src="Images/iphone.png" />
+        <div>
+          <h1>Let’s Help you Decide</h1>
+          <p>Tour Dine is a restaurant review platform being developed 
+            with the goal of bringing honest, experience based reviews to the public.</p>
+        </div>
+        <input type="text" placeholder="Enter Your Email Address" />
+        <button type="submit">Get Access</button>
+      </section>
+      <p>Features</p>
+      <img src="Images/Feature.png" alt="details of a restaurant" />
+      <p>Read & write reviews</p>
+      <section class="td_section2">
+        <h1>Rate your favorite restaurant</h1>
+        <div class="rating-card">
+          <div class="card1">
+            <header><h3>Garden Chicken</h3></header>
+            <div class="stars">
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star10.png" />
+            </div>
+          </div>
+          <div class="card2">
+            <header><h3>Olive Garden</h3></header>
+            <div class="stars">
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star10.png" />
+            </div>
+          </div>
+          <div class="card3">
+            <header><h3>KFC</h3></header>
+            <div class="stars">
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star7.png" />
+              <img src="Images/Star10.png" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <img src="Images/Feature2.png" alt="Location of a resturant" />
+      <p>Locate Restaurants fast and easy</p>
+      <section class="td_section3">
+        <div>
+          <h3>COMING SOON</h3>
+          <div class="countdown">
+            <div class="day">24</div>
+            <div class="separator">
+              <div></div>
+              <div></div>
+            </div>
+            <div class="hour">07</div>
+            <div class="separator">
+              <div></div>
+              <div></div>
+            </div>
+            <div class="minute">59</div>
+            <div class="separator">
+              <div></div>
+              <div></div>
+            </div>
+            <div class="seconds">01</div>
+          </div> 
+          <div>
+            <input type="text" placeholder="Enter your Email Address" />
+            <button type="submit"> Get Early Access</button>
+          </div>
+        </div>
+      </section>
+      <footer class="td_footer">
+        <img src="Images/footerLogo.png" alt="tour dine logo at footer" />
+        <div class="social-media">
+          <a href="#"><img src="Images/Vectorw2.png"/></a>
+          <a href="#"><img src="Images/Vectorf4.png" /></a>
+          <a href="#"><img src="Images/Vectort2.png" /></a>
+          <a href="#"><img src="Images/Vectori2.png"</a>
+        </div>
+        <ul>
+          <li>About</li>
+          <li>Support</li>
+          <li>Contact Us</li>
+        </ul>
+        <div>
+          <p>Terms and condition</p>
+          <p>Privacy policy</p>
+        </div>
+      </footer>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
