updating style.js

--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
         <div>
           <h3>COMING SOON</h3>
           <div class="countdown-container">
-            <div class="countdown day">24</div>
+            <div class="countdown day">00</div>
             <img class="colom" src="Images/colom_Vector.png" alt="" />
 
-            <div class="countdown hour">07</div>
+            <div class="countdown hour">00</div>
             <img class="colom" src="Images/colom_Vector.png" alt="" />
-            <div class="countdown minute">59</div>
+            <div class="countdown minute">00</div>
             <img class="colom" src="Images/colom_Vector.png" alt="" />
-            <div class="countdown seconds">01</div>
+            <div class="countdown seconds">00</div>
           </div>
           <form>
             <input type="text" placeholder="Enter your Email Address" />
@@ -142,6 +142,6 @@
         </div>
       </footer>
     </main>
-    <!-- <script src="script.js"></script> -->
-  </body>
+    <script src="script.js"></script>
+    </body>
 </html>
