adding chatbot code to index.html

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
       </footer>
     </main>
-    <script src="http://code.tidio.co/6rcdo3bqo47mxqkjwu9ee7mobdtuprzi.js"async></script>
+    <script src="//code.tidio.co/6rcdo3bqo47mxqkjwu9ee7mobdtuprzi.js"async></script>
     <script src="script.js"></script>
     </body>
 </html>
