embeded respective links to the social media links at the footer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <img src="Images/Star7.png" />
               <img src="Images/Star7.png" />
               <img src="Images/Star10.png" />
-              <p>3/5</p>
+              <p>4/5</p>
             </div>
           </div>
           <div class="card 3">
@@ -87,7 +87,7 @@
               <img src="Images/Star7.png" />
               <img src="Images/Star7.png" />
               <img src="Images/Star10.png" />
-              <p>3/5</p>
+              <p>4/5</p>
             </div>
           </div>
         </div>
@@ -126,10 +126,10 @@
       <footer class="td_footer">
         <img src="Images/footerLogo.png" alt="tour dine logo at footer" />
         <div class="social-media">
-          <a href="#"><img src="Images/Vectorw2.png" /></a>
-          <a href="#"><img src="Images/Vectorf4.png" /></a>
-          <a href="#"><img src="Images/Vectort2.png" /></a>
-          <a href="#"><img src="Images/Vectori2.png" /></a>
+          <a href="https://wa.me//2348024526323" target="_blank"><img src="Images/Vectorw2.png" /></a>
+          <a href="https://m.facebook.com/story.php?story_fbid=pfbid06FQKNNMUrrbVwq7LJ2vv4S2zuQXq5iwRaXya5k7ezTNKAJjhWYHtg4oLyniwZuvZl&id=100086823905113" target="_blank"><img src="Images/Vectorf4.png" /></a>
+          <a href="https://twitter.com/TourDine/status/1582765928147603456?t=0EDYwQw9VJSD_UEkpnb-eQ&s=19" target="_blank"><img src="Images/Vectort2.png" /></a>
+          <a href="https://www.instagram.com/p/Cj5sKG_KX8M/?igshid=YmMyMTA2M2Y=" target="_blank"><img src="Images/Vectori2.png" /></a>
         </div>
         <ul>
           <li>About</li>
