integration of the mailchimp form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,88 @@
   </head>
   <body>
     <main>
+      <!-- Begin Mailchimp Signup Form -->
+      <div class="newsletter newsletter-top-black" id="mc_embed_signup">
+        <form
+          action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="validate"
+          target="_self"
+        >
+          <div class="flex-box" id="mc_embed_signup_scroll">
+            <div class="display-none indicates-required">
+              <span class="asterisk">*</span> indicates required
+            </div>
+            <div class="mc-field-group">
+              <label class="display-none" for="mce-EMAIL"
+                >Email Address <span class="asterisk">*</span>
+              </label>
+              <input
+                placeholder="Enter your Email Address"
+                type="email"
+                value=""
+                name="EMAIL"
+                class="required email"
+                id="mce-EMAIL"
+                required
+              />
+              <span
+                id="mce-EMAIL-HELPERTEXT"
+                class="helper_text display-none"
+              ></span>
+            </div>
+            <div id="mce-responses" class="clear foot display-none">
+              <div
+                class="response"
+                id="mce-error-response"
+                style="display: none"
+              ></div>
+              <div
+                class="response"
+                id="mce-success-response"
+                style="display: none"
+              ></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div
+              class="display-none"
+              style="position: absolute; left: -5000px"
+              aria-hidden="true"
+            >
+              <input
+                type="text"
+                name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
+                tabindex="-1"
+                value=""
+              />
+            </div>
+            <div class="optionalParent">
+              <div class="clear foot">
+                <input
+                  type="submit"
+                  value="Get Early Access"
+                  name="subscribe"
+                  id="mc-embedded-subscribe"
+                  class="button"
+                />
+                <p class="brandingLogo display-none">
+                  <a
+                    href="http://eepurl.com/ibTWiT"
+                    title="Mailchimp - email marketing made easy and fun"
+                    ><img
+                      src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
+                  /></a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!--End mc_embed_signup-->
+
       <nav>
         <header class="td_header">
           <div class="td_header_logo">
@@ -126,10 +208,24 @@
       <footer class="td_footer">
         <img src="Images/footerLogo.png" alt="tour dine logo at footer" />
         <div class="social-media">
-          <a href="https://wa.me//2348024526323" target="_blank"><img src="Images/Vectorw2.png" /></a>
-          <a href="https://m.facebook.com/story.php?story_fbid=pfbid06FQKNNMUrrbVwq7LJ2vv4S2zuQXq5iwRaXya5k7ezTNKAJjhWYHtg4oLyniwZuvZl&id=100086823905113" target="_blank"><img src="Images/Vectorf4.png" /></a>
-          <a href="https://twitter.com/TourDine/status/1582765928147603456?t=0EDYwQw9VJSD_UEkpnb-eQ&s=19" target="_blank"><img src="Images/Vectort2.png" /></a>
-          <a href="https://www.instagram.com/p/Cj5sKG_KX8M/?igshid=YmMyMTA2M2Y=" target="_blank"><img src="Images/Vectori2.png" /></a>
+          <a href="https://wa.me//2348024526323" target="_blank"
+            ><img src="Images/Vectorw2.png"
+          /></a>
+          <a
+            href="https://m.facebook.com/story.php?story_fbid=pfbid06FQKNNMUrrbVwq7LJ2vv4S2zuQXq5iwRaXya5k7ezTNKAJjhWYHtg4oLyniwZuvZl&id=100086823905113"
+            target="_blank"
+            ><img src="Images/Vectorf4.png"
+          /></a>
+          <a
+            href="https://twitter.com/TourDine/status/1582765928147603456?t=0EDYwQw9VJSD_UEkpnb-eQ&s=19"
+            target="_blank"
+            ><img src="Images/Vectort2.png"
+          /></a>
+          <a
+            href="https://www.instagram.com/p/Cj5sKG_KX8M/?igshid=YmMyMTA2M2Y="
+            target="_blank"
+            ><img src="Images/Vectori2.png"
+          /></a>
         </div>
         <ul>
           <li>About</li>
@@ -141,8 +237,92 @@
           <p>Privacy policy</p>
         </div>
       </footer>
+      <!-- Begin Mailchimp Signup Form -->
+      <div class="newsletter" id="mc_embed_signup">
+        <form
+          action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="validate"
+          target="_self"
+        >
+          <div class="flex-box" id="mc_embed_signup_scroll">
+            <div class="display-none indicates-required">
+              <span class="asterisk">*</span> indicates required
+            </div>
+            <div class="mc-field-group">
+              <label class="display-none" for="mce-EMAIL"
+                >Email Address <span class="asterisk">*</span>
+              </label>
+              <input
+                placeholder="Enter your Email Address"
+                type="email"
+                value=""
+                name="EMAIL"
+                class="required email"
+                id="mce-EMAIL"
+                required
+              />
+              <span
+                id="mce-EMAIL-HELPERTEXT"
+                class="helper_text display-none"
+              ></span>
+            </div>
+            <div id="mce-responses" class="clear foot display-none">
+              <div
+                class="response"
+                id="mce-error-response"
+                style="display: none"
+              ></div>
+              <div
+                class="response"
+                id="mce-success-response"
+                style="display: none"
+              ></div>
+            </div>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div
+              class="display-none"
+              style="position: absolute; left: -5000px"
+              aria-hidden="true"
+            >
+              <input
+                type="text"
+                name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
+                tabindex="-1"
+                value=""
+              />
+            </div>
+            <div class="optionalParent">
+              <div class="clear foot">
+                <input
+                  type="submit"
+                  value="Get Early Access"
+                  name="subscribe"
+                  id="mc-embedded-subscribe"
+                  class="button"
+                />
+                <p class="brandingLogo display-none">
+                  <a
+                    href="http://eepurl.com/ibTWiT"
+                    title="Mailchimp - email marketing made easy and fun"
+                    ><img
+                      src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
+                  /></a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+
+      <!--End mc_embed_signup-->
     </main>
-    <script src="//code.tidio.co/6rcdo3bqo47mxqkjwu9ee7mobdtuprzi.js"async></script>
+    <script
+      src="//code.tidio.co/6rcdo3bqo47mxqkjwu9ee7mobdtuprzi.js"
+      async
+    ></script>
     <script src="script.js"></script>
-    </body>
+  </body>
 </html>
