comment out the old form

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             Tour Dine is a restaurant review platform being developed with the
             goal of bringing honest, experience based reviews to the public.
           </p>
-          <form class="blk">
+          <form class="form blk">
             <input type="text" placeholder="Enter your Email Address" />
             <button type="submit">Get Early Access</button>
           </form>
@@ -199,7 +199,7 @@
             <img class="colom" src="Images/colom_Vector.png" alt="" />
             <div class="countdown seconds">00</div>
           </div>
-          <form>
+          <form class="form">
             <input type="text" placeholder="Enter your Email Address" />
             <button type="submit">Get Early Access</button>
           </form>
