update on style

--- a/index.html
+++ b/index.html
@@ -9,88 +9,6 @@
   </head>
   <body>
     <main>
-      <!-- Begin Mailchimp Signup Form -->
-      <div class="newsletter newsletter-top-black" id="mc_embed_signup">
-        <form
-          action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
-          method="post"
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="validate"
-          target="_self"
-        >
-          <div class="flex-box" id="mc_embed_signup_scroll">
-            <div class="display-none indicates-required">
-              <span class="asterisk">*</span> indicates required
-            </div>
-            <div class="mc-field-group">
-              <label class="display-none" for="mce-EMAIL"
-                >Email Address <span class="asterisk">*</span>
-              </label>
-              <input
-                placeholder="Enter your Email Address"
-                type="email"
-                value=""
-                name="EMAIL"
-                class="required email"
-                id="mce-EMAIL"
-                required
-              />
-              <span
-                id="mce-EMAIL-HELPERTEXT"
-                class="helper_text display-none"
-              ></span>
-            </div>
-            <div id="mce-responses" class="clear foot display-none">
-              <div
-                class="response"
-                id="mce-error-response"
-                style="display: none"
-              ></div>
-              <div
-                class="response"
-                id="mce-success-response"
-                style="display: none"
-              ></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div
-              class="display-none"
-              style="position: absolute; left: -5000px"
-              aria-hidden="true"
-            >
-              <input
-                type="text"
-                name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
-                tabindex="-1"
-                value=""
-              />
-            </div>
-            <div class="optionalParent">
-              <div class="clear foot">
-                <input
-                  type="submit"
-                  value="Get Early Access"
-                  name="subscribe"
-                  id="mc-embedded-subscribe"
-                  class="button"
-                />
-                <p class="brandingLogo display-none">
-                  <a
-                    href="http://eepurl.com/ibTWiT"
-                    title="Mailchimp - email marketing made easy and fun"
-                    ><img
-                      src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
-                  /></a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <!--End mc_embed_signup-->
-
       <nav>
         <header class="td_header">
           <div class="td_header_logo">
@@ -107,16 +25,97 @@
       <section class="td_section1">
         <img src="Images/Ellipse4.png" alt="" class="bg rating_bg h2" />
         <img src="Images/Ellipse3.png" alt="" class="bg rating_bg h1" />
-        <div>
+        <div class="section1_div">
           <h1>Let’s Help you Decide.</h1>
           <p>
             Tour Dine is a restaurant review platform being developed with the
             goal of bringing honest, experience based reviews to the public.
           </p>
-          <form class="form blk">
+          <!-- <form class="form blk">
             <input type="text" placeholder="Enter your Email Address" />
             <button type="submit">Get Early Access</button>
-          </form>
+          </form> -->
+          <!-- Begin Mailchimp Signup Form -->
+          <div class="newsletter newsletter-top-black" id="mc_embed_signup">
+            <form
+              action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
+              method="post"
+              id="mc-embedded-subscribe-form"
+              name="mc-embedded-subscribe-form"
+              class="validate"
+              target="_self"
+            >
+              <div class="flex-box" id="mc_embed_signup_scroll">
+                <div class="display-none indicates-required">
+                  <span class="asterisk">*</span> indicates required
+                </div>
+                <div class="mc-field-group">
+                  <label class="display-none" for="mce-EMAIL"
+                    >Email Address <span class="asterisk">*</span>
+                  </label>
+                  <input
+                    placeholder="Enter your Email Address"
+                    type="email"
+                    value=""
+                    name="EMAIL"
+                    class="required email"
+                    id="mce-EMAIL"
+                    required
+                  />
+                  <span
+                    id="mce-EMAIL-HELPERTEXT"
+                    class="helper_text display-none"
+                  ></span>
+                </div>
+                <div id="mce-responses" class="clear foot display-none">
+                  <div
+                    class="response"
+                    id="mce-error-response"
+                    style="display: none"
+                  ></div>
+                  <div
+                    class="response"
+                    id="mce-success-response"
+                    style="display: none"
+                  ></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div
+                  class="display-none"
+                  style="position: absolute; left: -5000px"
+                  aria-hidden="true"
+                >
+                  <input
+                    type="text"
+                    name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
+                    tabindex="-1"
+                    value=""
+                  />
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input
+                      type="submit"
+                      value="Get Early Access"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      class="button"
+                    />
+                    <p class="brandingLogo display-none">
+                      <a
+                        href="http://eepurl.com/ibTWiT"
+                        title="Mailchimp - email marketing made easy and fun"
+                        ><img
+                          src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
+                      /></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
         </div>
         <img class="image5" src="Images/iphone.png" />
       </section>
@@ -199,10 +198,91 @@
             <img class="colom" src="Images/colom_Vector.png" alt="" />
             <div class="countdown seconds">00</div>
           </div>
-          <form class="form">
+          <!-- <form class="form">
             <input type="text" placeholder="Enter your Email Address" />
             <button type="submit">Get Early Access</button>
-          </form>
+          </form> -->
+          <!-- Begin Mailchimp Signup Form -->
+          <div class="newsletter" id="mc_embed_signup">
+            <form
+              action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
+              method="post"
+              id="mc-embedded-subscribe-form"
+              name="mc-embedded-subscribe-form"
+              class="validate"
+              target="_self"
+            >
+              <div class="flex-box" id="mc_embed_signup_scroll">
+                <div class="display-none indicates-required">
+                  <span class="asterisk">*</span> indicates required
+                </div>
+                <div class="mc-field-group">
+                  <label class="display-none" for="mce-EMAIL"
+                    >Email Address <span class="asterisk">*</span>
+                  </label>
+                  <input
+                    placeholder="Enter your Email Address"
+                    type="email"
+                    value=""
+                    name="EMAIL"
+                    class="required email"
+                    id="mce-EMAIL"
+                    required
+                  />
+                  <span
+                    id="mce-EMAIL-HELPERTEXT"
+                    class="helper_text display-none"
+                  ></span>
+                </div>
+                <div id="mce-responses" class="clear foot display-none">
+                  <div
+                    class="response"
+                    id="mce-error-response"
+                    style="display: none"
+                  ></div>
+                  <div
+                    class="response"
+                    id="mce-success-response"
+                    style="display: none"
+                  ></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div
+                  class="display-none"
+                  style="position: absolute; left: -5000px"
+                  aria-hidden="true"
+                >
+                  <input
+                    type="text"
+                    name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
+                    tabindex="-1"
+                    value=""
+                  />
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input
+                      type="submit"
+                      value="Get Early Access"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      class="button"
+                    />
+                    <p class="brandingLogo display-none">
+                      <a
+                        href="http://eepurl.com/ibTWiT"
+                        title="Mailchimp - email marketing made easy and fun"
+                        ><img
+                          src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
+                      /></a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
         </div>
       </section>
       <footer class="td_footer">
@@ -237,87 +317,6 @@
           <p>Privacy policy</p>
         </div>
       </footer>
-      <!-- Begin Mailchimp Signup Form -->
-      <div class="newsletter" id="mc_embed_signup">
-        <form
-          action="https://app.us18.list-manage.com/subscribe/post?u=e5269e3a37538b9fe24a7c4d0&amp;id=ef64c0f8e4&amp;f_id=007524e7f0"
-          method="post"
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="validate"
-          target="_self"
-        >
-          <div class="flex-box" id="mc_embed_signup_scroll">
-            <div class="display-none indicates-required">
-              <span class="asterisk">*</span> indicates required
-            </div>
-            <div class="mc-field-group">
-              <label class="display-none" for="mce-EMAIL"
-                >Email Address <span class="asterisk">*</span>
-              </label>
-              <input
-                placeholder="Enter your Email Address"
-                type="email"
-                value=""
-                name="EMAIL"
-                class="required email"
-                id="mce-EMAIL"
-                required
-              />
-              <span
-                id="mce-EMAIL-HELPERTEXT"
-                class="helper_text display-none"
-              ></span>
-            </div>
-            <div id="mce-responses" class="clear foot display-none">
-              <div
-                class="response"
-                id="mce-error-response"
-                style="display: none"
-              ></div>
-              <div
-                class="response"
-                id="mce-success-response"
-                style="display: none"
-              ></div>
-            </div>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div
-              class="display-none"
-              style="position: absolute; left: -5000px"
-              aria-hidden="true"
-            >
-              <input
-                type="text"
-                name="b_e5269e3a37538b9fe24a7c4d0_ef64c0f8e4"
-                tabindex="-1"
-                value=""
-              />
-            </div>
-            <div class="optionalParent">
-              <div class="clear foot">
-                <input
-                  type="submit"
-                  value="Get Early Access"
-                  name="subscribe"
-                  id="mc-embedded-subscribe"
-                  class="button"
-                />
-                <p class="brandingLogo display-none">
-                  <a
-                    href="http://eepurl.com/ibTWiT"
-                    title="Mailchimp - email marketing made easy and fun"
-                    ><img
-                      src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_light_dtp.svg"
-                  /></a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <!--End mc_embed_signup-->
     </main>
     <script
       src="//code.tidio.co/6rcdo3bqo47mxqkjwu9ee7mobdtuprzi.js"
